<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty_string"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/lbl_caption"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center_horizontal"
	        android:text="@string/lbl_new_record"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/lbl_systolic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_systolic"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <ImageButton
	            android:id="@+id/btn_systolic_minus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/empty_string"
	            android:src="@drawable/minus_btn_icon" />
	
	        <EditText
	            android:id="@+id/edit_systolic"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:gravity="center_vertical|center_horizontal"
	            android:inputType="number" >
	
	            <requestFocus />
	        </EditText>
	
	        <ImageButton
	            android:id="@+id/btn_systolic_plus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/empty_string"
	            android:src="@drawable/plus_btn_icon" />
	
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/lbl_diastolic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_diastolic"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <ImageButton
	            android:id="@+id/btn_diastolic_minus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/empty_string"
	            android:src="@drawable/minus_btn_icon" />
	
	        <EditText
	            android:id="@+id/edit_diastolic"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:gravity="center_vertical|center_horizontal"
	            android:inputType="number" >
	
	            <requestFocus />
	        </EditText>
	
	        <ImageButton
	            android:id="@+id/btn_diastolic_plus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/empty_string"
	            android:src="@drawable/plus_btn_icon" />
	
	    </LinearLayout>

	    <TextView
	        android:id="@+id/lbl_pulse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_pulse"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <ImageButton
	            android:id="@+id/btn_pulse_minus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/empty_string"
	            android:src="@drawable/minus_btn_icon" />
	
	        <EditText
	            android:id="@+id/edit_pulse"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:gravity="center_vertical|center_horizontal"
	            android:inputType="number" >
	
	            <requestFocus />
	        </EditText>
	
	        <ImageButton
	            android:id="@+id/btn_pulse_plus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/empty_string"
	            android:src="@drawable/plus_btn_icon" />
	
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_gravity="bottom"
	        android:gravity="bottom"
	        android:weightSum="1" >

	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:text="@string/btn_cancel" />

	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:text="@string/btn_save" />
	    </LinearLayout>

	</LinearLayout>
</FrameLayout>
